# ntnx-mcp

./: .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  pyproject.toml  ralph-loop.ps1
docs/: DEPLOYMENT.md  TOOL_USE_CASES.md  USAGE.md
examples/: 01-list-all-vms.md  02-find-vms-by-name.md  03-get-vm-details.md  04-create-new-vm.md  05-vm-power-operations.md  06-delete-vm.md  07-list-clusters.md  08-get-cluster-details.md  09-list-hosts.md  10-list-networks.md  11-create-subnet.md  12-list-storage-containers.md  13-list-volume-groups.md  14-list-active-alerts.md  15-acknowledge-alert.md  16-view-events.md  17-list-images.md  18-find-image-by-name.md  19-list-security-policies.md  20-check-licensing.md  README.md
specs/: PRD.md
src/ntnx_mcp/: __init__.py  __main__.py  client.py  config.py  executor.py  server.py
src/ntnx_mcp/tools/: __init__.py  base.py  registry.py
tests/: __init__.py  test_client.py  test_config.py  test_tools.py
